--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,13 @@
 @import url(https://fonts.googleapis.com/css?family=Audiowide);
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 body {
     display: flex;
     justify-content: center;
@@ -16,7 +24,7 @@ body {
 }
 
 .calc_title {
-    font-family: audiowide, sans-serif;
+    font-family: Audiowide, sans-serif;
     text-shadow: 0 0 5px black;
     font-size: 1.1rem;
     font-weight: bolder;
@@ -28,7 +36,7 @@ body {
     align-items: center;
     gap: 1px;
 
-    padding: 0 2px;
+    padding: 2px;
 
     background:rgb(109, 109, 109);
     box-shadow:
@@ -52,23 +60,43 @@ body {
     padding: 30px;
     border-radius: 15px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 1);
-    width: 400px;
+    width: 460px;
     text-align: center;
 }
 
 .display {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    flex-direction: column;
+
+    word-wrap: break-word;
+    word-break: break-all;
+
+    width: 100%;
+    min-height: 125px;
+    height: auto;
+
     background:rgb(89, 99, 57);
+    font-family: 'Audiowide', cursive;
+    font-size: 3rem;
+    color: #1b1b1b;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 30px;
     box-shadow:
       inset 1px 1px 7px 0px #050505,
       0px 0px 4px 2px #000,
       0px 0px 4px 2px #777;
-    color: #1b1b1b;
-    font-size: 3rem;
-    padding: 10px;
-    border-radius: 10px;
-    text-align: right;
-    margin-bottom: 30px;
-    font-family: 'Audiowide', cursive;
+}
+
+.display .previous_number {
+    color: rgba(0, 0, 0, 0.507);
+    font-size: medium;
+}
+
+.display .current_number {
+    font-size: 2.5rem;
 }
 
 .buttons {
@@ -99,9 +127,9 @@ body {
 }
 
 .operator {
-    background: #007694;
+    background: rgb(0, 118, 148);
 }
 
 .delete {
-    background: #e4433d;
+    background: rgb(228, 67, 61);
 }
